--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!---========Work Experience ======--->
     <section class="education section" id="education">
-      <h2 class="section-title">Experience</h2>
+      <h2 class="section-title">Work Experience</h2>
       <div class="education-container bd-grid">
 
         <div class="education-data">
