--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="education-data">
           <div class="education-names">
             <!-- <i class="bx bxl-html5 skills-icon"></i> -->
-            <span class="education-name">Internship in Python(Django, Flask)</span>
+            <span class="education-name">Internship - Python (Django, Flask)</span>
             <p class="education-platform ">Soften Technologies, Ernakulam</p>
             <p class="education-duration ">June 2019 - November 2019 </p>
 
@@ -249,39 +249,8 @@
               </div>
             </div>
 
-            <!-- <div class="skills-data">
-            <div class="skills-names">
-              <i class="bx bxl-redux skills-icon"></i>
-              <span class="skills-name">Redux</span>
-            </div> -->
-            <!-- <div class="skills-bar skills-redux"></div>  -->
-            <!-- <div class="skills-bar skills-css"></div>  -->
-            <!-- <div> -->
-            <!-- <span class="skills-percentage">50%</span> -->
-            <!-- </div> 
-
-          </div> -->
-
-            <!-- <div class="skills-data">
-            <div class="skills-names">
-              <img class="skills-icon" src="./assets/img/typescript.png" alt="" />
-              <span class="skills-name">TypeScript</span>
-            </div>
-          </div> -->
           </div>
           <div>
-
-            <!-- <h2 class="skills-subtitle">Back-end Skills</h2> -->
-            <!-- <div class="skills-data">
-            <div class="skills-names">
-              <img class="skills-icon" src="./assets/img/express.png" alt="" />
-              <span class="skills-name">Express.js</span>
-            </div> -->
-            <!-- <div class="skills-bar skills-css"></div>  -->
-            <!-- <div> -->
-            <!-- <span class="skills-percentage">70%</span> -->
-            <!-- </div> 
-          </div> -->
 
             <div class="skills-data">
               <div class="skills-names">
@@ -293,17 +262,6 @@
                 <!-- <span class="skills-percentage">70%</span> -->
               </div>
             </div>
-
-            <!-- <div class="skills-data">
-            <div class="skills-names">
-              <img class="skills-icon" src="./assets/img/mongodb.png" alt="" />
-              <span class="skills-name">MongoDB</span>
-            </div> -->
-            <!-- <div class="skills-bar skills-css"></div>  -->
-            <!-- <div> -->
-            <!-- <span class="skills-percentage">70%</span> -->
-            <!-- </div> 
-          </div> -->
 
 
             <div>
@@ -367,65 +325,8 @@
             </div> -->
           </div>
 
-
-          <!-- <div class="project-img">
-            <img src="assets/img/epic.png" alt="Reddit.com" />
-            <p class="project-title">Epicgames.com clone</p>
-            <p class="project-subtitle">
-              Epic Games, Inc. is an American video game and publisher website. <br />
-              <br />
-              A collaborative project built by a team of 6, executed in 5 days.
-              <br />
-              <br /> HTML | CSS | Javascript | Node | Express | MongoDB
-            </p>
-            <div class="project-btns">
-              <a href="https://github.com/salakhas/epicGames" target="_blank" class="small-btn button">
-
-                <i class="bx bxl-github"></i>
-              </a>
-              <a href="https://epic-games-web.vercel.app/" target="_blank" class="small-btn button">
-                Live
-                <i class="bx bx-link-external"></i>
-              </a>
-              <a href="https://medium.com/@ssalakha16/building-a-clone-of-epic-games-7f3c5b4ab59c" target="_blank"
-                class="small-btn button">
-                Blog
-                <i class="bx bx-blog"></i>
-              </a>
-            </div>
-          </div> -->
-
-          <!-- <div class="project-img">
-            <img src="assets/img/youtube.PNG" alt="cult.fit" />
-            <p class="project-title">Youtube clone</p>
-            <p class="project-subtitle">
-              A web application which is just cpoy of Youtube.
-              <br />
-              <br />
-              It is Individual Project build by Me.
-              . <br />
-              <br />HTML | CSS | DOM
-            </p>
-            <div class="project-btns">
-              <a href="https://github.com/tusharsahu2599/Youtube-mini-clone" target="_blank" class="small-btn button">
-
-                <i class="bx bxl-github"></i>
-              </a>
-
-              <a href="https://tusharsahu2599.github.io/medplus/homepage" target="_blank" class="small-btn button">
-                Live
-                <i class="bx bx-link-external"></i>
-              </a>
-              <a href="https://medium.com/@hgauba4/how-did-our-team-build-the-mednear-clone-241227129f79"
-                target="_blank" class="small-btn button">
-                Blog
-                <i class="bx bx-blog"></i>
-              </a>
-            </div>
-          </div> -->
-
           <div class="project-img">
-            <img src="assets/img/portfolio.PNG" alt="cult.fit" />
+            <img src="assets/img/portfolio.PNG" alt="Portfolio-image" />
             <p class="project-title">Portfolio</p>
             <p class="project-subtitle">
               A portfolio web application.
@@ -454,78 +355,8 @@
             </div> -->
           </div>
 
-          <!-- <div class="project-img">
-            <img src="assets/img/swiggy.jpg" alt="Swiggy.com" />
-            <p class="project-title">Swiggy clone</p>
-            <p class="project-subtitle">
-              Swiggy is food ordering and delivery service provider in all over india from your nearest Hotels.
-              <br />
-              <br />
-              A collaborative project built by a team of 4, executed in 4 days.
-              <br />
-              <br />
-              React | Redux | Node | Express | MongoDB
-            </p>
-            <div class="project-btns">
-              <a href="https://github.com/h1t3ndr4/Swiggy-Clone" target="_blank" class="small-btn button">
-                Code<i class="bx bxl-github"></i>
-              </a>
-              <a href="https://swiggy-bwjc9njal-premkumar-hulikoppe.vercel.app/" target="_blank"
-                class="small-btn button">
-                Live<i class="bx bx-link-external"></i>
-              </a>
-            </div>
-          </div> -->
-
-          <!-- <div class="project-img">
-            <img src="assets/img/Tinde-chat.png" alt="Tinde chat" />
-            <p class="project-title">
-              Tinde Chat
-            </p>
-            <p class="project-subtitle">
-              Tinde Chat, it's chat application you can connect and chat with others.
-
-              <br />
-              <br />
-              A collaborative project built by a team of 3, executed in 3 days.
-              <br />
-              <br />
-              React | Redux | Node | Express | MongoDB
-            </p>
-            <div class="project-btns">
-              <a href="https://github.com/Tinde_Chatter" target="_blank" class="small-btn button">
-                Code<i class="bx bxl-github"></i>
-              </a>
-              <a href="https://mern-tinde-chater.herokuapp.com/" target="_blank" class="small-btn button">
-                Live<i class="bx bx-link-external"></i>
-              </a>
-            </div>
-          </div> -->
-
-          <!-- <div class="project-img">
-            <img src="assets/img/Redux-shop.PNG" alt="shop app" />
-            <p class="project-title">
-              Shopping App
-            </p>
-            <p class="project-subtitle">
-              It's two Page Shopping app using React Redux.
-
-              <br />
-              <br />
-              Its Individual project built by me.
-              <br />
-              <br />
-              React | Redux | Rest API
-            </p>
-            <div class="project-btns">
-              <a href="https://github.com/tusharsahu2599/Redux-app" target="_blank" class="small-btn button">
-                Code<i class="bx bxl-github"></i>
-              </a>
-              <a href="https://react-redux-routing.vercel.app/" target="_blank" class="small-btn button">
-                Live<i class="bx bx-link-external"></i>
-              </a>
-            </div>
-          </div> -->
+          
+          
         </div>
       </section>
   </main>
