--- a/index.html
+++ b/index.html
@@ -37,11 +37,17 @@
             <a href="#about" class="nav-link about">About</a>
           </li>
           <li class="nav-item">
+            <a href="#work-experience" class="nav-link work-experience">Work Experience</a>
+          </li>
+          <li class="nav-item">
+            <a href="#education" class="nav-link education">Education</a>
+          </li>
+          <li class="nav-item">
             <a href="#skills" class="nav-link skills">Skills</a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a href="#projects" class="nav-link projects">Projects</a>
-          </li> -->
+          </li>
           <li class="nav-item">
             <a href="#contact" class="nav-link contact">Contact</a>
           </li>
@@ -114,7 +120,7 @@
     </section>
 
     <!---========Work Experience ======--->
-    <section class="education section" id="education">
+    <section class="education section" id="work-experience">
       <h2 class="section-title">Work Experience</h2>
       <div class="education-container bd-grid">
 
