--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           </div>
 
           <div class="project-img">
-            <img src="assets/img/portfolio.PNG" alt="Portfolio-image" />
+            <img src="assets/img/portfolio.png" alt="Portfolio-image" />
             <p class="project-title">Portfolio</p>
             <p class="project-subtitle">
               A portfolio web application.
