--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
         <div class="project-container">
           <div class="project-img">
-            <img src="assets/img/01.png" alt="cult.fit" />
+            <img src="assets/img/01.png" alt="grocery-image" />
             <p class="project-title">FreshMart - Online Grocery</p>
             <p class="project-subtitle">
               A web application to buy groceries online.
@@ -332,7 +332,7 @@
           </div>
 
           <div class="project-img">
-            <img src="assets/img/portfolio.png" alt="Portfolio-image" />
+            <img src="assets/img/portfolio.png" alt="portfolio-image" />
             <p class="project-title">Portfolio</p>
             <p class="project-subtitle">
               A portfolio web application.
