--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <main class="l-main">
     <!--===== HOME =====-->
-    <div class="bg-main">
+    <div class="bg-main" style="background-image: url(./assets/img/bg-img2.jpg);">
       <section class="home bd-grid section" id="home">
         <div class="home-data ">
           <h2 class="home-title">
