--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <!-- <h2 class="skills-subtitle">Front-end Skills</h2> -->
               <div class="skills-data">
                 <div class="skills-names">
-                  <i class="fa-brands fa-html5 fa-2xl skills-icon"></i>
+                  <i class="bx bxl-html5 skills-icon"></i>
                   <span class="skills-name">HTML</span>
                 </div>
                 <div class="skills-bar skills-html"></div>
@@ -233,7 +233,7 @@
               </div>
               <div class="skills-data">
                 <div class="skills-names">
-                  <i class="fa-brands fa-css3-alt fa-2xl skills-icon"></i>
+                  <i class="bx bxl-css3 skills-icon"></i>
                   <span class="skills-name">CSS</span>
                 </div>
                 <div class="skills-bar skills-css"></div>
@@ -243,40 +243,40 @@
               </div>
               <div class="skills-data">
                 <div class="skills-names">
-                  <i class="fa-brands fa-js fa-2xl skills-icon"></i>
+                  <i class="bx bxl-javascript skills-icon"></i>
                   <span class="skills-name">JavaScript</span>
                 </div>
-                <div class="skills-bar skills-js"></div>
-                <div>
-                  <span class="skills-percentage">50%</span>
-                </div>
-
-              </div>
-
-              <div class="skills-data">
-                <div class="skills-names">
-                  <i class="fa-brands fa-bootstrap  fa-2xl skills-icon"></i>
-                  <span class="skills-name">Bootstrap</span>
-                </div>
-                <div class="skills-bar skills-bootstrap"></div>
+                <div class="skills-bar skills-css"></div>
                 <div>
                   <span class="skills-percentage">70%</span>
                 </div>
 
               </div>
 
+              <div class="skills-data">
+                <div class="skills-names">
+                  <i class="fa-brands fa-bootstrap skills-icon"></i>
+                  <span class="skills-name">Bootstrap</span>
+                </div>
+                <div class="skills-bar skills-bootsrap"></div>
+                <div>
+                  <span class="skills-percentage">70%</span>
+                </div>
+
+              </div>
+              
 
             </div>
             <div>
 
               <div class="skills-data">
                 <div class="skills-names">
-                  <i class="fa-brands fa-node-js fa-2xl skills-icon"></i>
+                  <i class="bx bxl-nodejs skills-icon"></i>
                   <span class="skills-name">Node.js</span>
                 </div>
-                <div class="skills-bar skills-node"></div>
+                <div class="skills-bar skills-css"></div>
                 <div>
-                  <span class="skills-percentage">50%</span>
+                  <span class="skills-percentage">70%</span>
                 </div>
               </div>
 
@@ -288,7 +288,7 @@
                     <i class="fa-brands fa-github fa-2xl skills-icon"></i>
                     <span class="skills-name">Github</span>
                   </div>
-                  <div class="skills-bar skills-github"></div>
+                  <div class="skills-bar skills-css"></div>
                   <div>
                     <span class="skills-percentage">50%</span>
                   </div>
@@ -300,7 +300,7 @@
                     <i class="fa-brands fa-git-alt fa-2xl skills-icon"></i>
                     <span class="skills-name">Git</span>
                   </div>
-                  <div class="skills-bar skills-git"></div>
+                  <div class="skills-bar skills-css"></div>
                   <div>
                     <span class="skills-percentage">70%</span>
                   </div>
@@ -309,7 +309,7 @@
 
                 <div class="skills-data">
                   <div class="skills-names">
-                    <i class="fa-brands fa-react fa-2xl skills-icon"></i>
+                    <i class="bx bxl-react skills-icon"></i>
                     <span class="skills-name">React</span>
                   </div>
                   <div class="skills-bar skills-react"></div>
@@ -332,7 +332,7 @@
 
 
             <div class="project-img">
-              <img src="assets/img/playstation.png" alt="grocery-image" />
+              <a href="https://sudevvs9510.github.io/playstation-clone/"><img src="assets/img/playstation.png" alt="grocery-image" /></a>
               <p class="project-title">PlayStation Clone</p>
               <p class="project-subtitle">
                 PlayStation clone webspage
@@ -345,7 +345,7 @@
             </div>
 
             <div class="project-img">
-              <img src="assets/img/zomato.png" alt="grocery-image" />
+              <a href="https://sudevvs9510.github.io/zomato-clone/"><img src="assets/img/zomato.png" alt="grocery-image" /></a>
               <p class="project-title">Zomato Clone</p>
               <p class="project-subtitle">
                 Zomato Clone webpage
@@ -358,7 +358,7 @@
             </div>
 
             <div class="project-img">
-              <img src="assets/img/01.png" alt="grocery-image" />
+              <a href="https://sudevvs9510.github.io/freshmartgrocery.com/"><img src="assets/img/01.png" alt="grocery-image" /></a>
               <p class="project-title">FreshMart - Online Grocery</p>
               <p class="project-subtitle">
                 A web application to buy groceries online.
@@ -371,15 +371,15 @@
             </div>
 
             <div class="project-img">
-              <img src="assets/img/portfolio.png" alt="portfolio-image" />
-              <p class="project-title">Portfolio</p>
+              <a href="https://sudevvs9510.github.io/netflix-clone/"><img src="./assets/img/netflix-img.png" alt="portfolio-image" /></a>
+              <p class="project-title">Netflix</p>
               <p class="project-subtitle">
-                A portfolio web application.
+                A Netflix clone web application.
                 <br />
                 <br />
                 It is Individual Project build by Me.
                 <br />
-                <br />HTML | CSS | JavaScript
+                <br />HTML | CSS | Bootstrap
               </p>
             </div>
 
@@ -424,7 +424,7 @@
           <span id="message-error"></span>
         </div>
 
-        <button class="btn-col " type="submit" onclick="">Send</button>
+        <button class="btn-col" type="submit" onclick="">Send</button>
 
         <div class="errormsg">
           <span id="msg"></span>
@@ -444,7 +444,7 @@
       <a href="mailto:sudevvs1999@gmail.com" target="_blank" class="footer-icon"><i
           class="fa-solid fa-envelope fa-xl"></i></a>
       <a href="https://github.com/" target="_blank" class="footer-icon"><i class="fa-brands fa-github fa-xl"></i></a>
-
+      
       <a href="" target="_blank" class="footer-icon"><i class="fa-brands fa-instagram fa-xl"></i></a>
 
       <a href="" target="_blank" class="footer-icon"><i class="fa-brands fa-facebook fa-xl"></i></a>
