--- a/index.html
+++ b/index.html
@@ -332,7 +332,9 @@
 
 
             <div class="project-img">
-              <a href="https://sudevvs9510.github.io/playstation-clone/"><img src="assets/img/playstation.png" alt="grocery-image" /></a>
+              <!-- <a href="https://sudevvs9510.github.io/playstation-clone/"> -->
+                <img src="assets/img/playstation.png" alt="grocery-image" />
+              <!-- </a> -->
               <p class="project-title">PlayStation Clone</p>
               <p class="project-subtitle">
                 PlayStation clone webspage
@@ -345,7 +347,9 @@
             </div>
 
             <div class="project-img">
-              <a href="https://sudevvs9510.github.io/zomato-clone/"><img src="assets/img/zomato.png" alt="grocery-image" /></a>
+              <!-- <a href="https://sudevvs9510.github.io/zomato-clone/"> -->
+                <img src="assets/img/zomato.png" alt="grocery-image" />
+              <!-- </a> -->
               <p class="project-title">Zomato Clone</p>
               <p class="project-subtitle">
                 Zomato Clone webpage
@@ -358,7 +362,9 @@
             </div>
 
             <div class="project-img">
-              <a href="https://sudevvs9510.github.io/freshmartgrocery.com/"><img src="assets/img/01.png" alt="grocery-image" /></a>
+              <!-- <a href="https://sudevvs9510.github.io/freshmartgrocery.com/"> -->
+                <img src="assets/img/01.png" alt="grocery-image" />
+              <!-- </a> -->
               <p class="project-title">FreshMart - Online Grocery</p>
               <p class="project-subtitle">
                 A web application to buy groceries online.
@@ -371,7 +377,9 @@
             </div>
 
             <div class="project-img">
-              <a href="https://sudevvs9510.github.io/netflix-clone/"><img src="./assets/img/netflix-img.png" alt="portfolio-image" /></a>
+              <!-- <a href="https://sudevvs9510.github.io/netflix-clone/"> -->
+                <img src="./assets/img/netflix-img.png" alt="portfolio-image" />
+              <!-- </a> -->
               <p class="project-title">Netflix</p>
               <p class="project-subtitle">
                 A Netflix clone web application.
